# telos-distribute

./: .gitignore  CMakeLists.txt  README.md  build.sh  deploy.sh  telos-distribute.wasm
include/eosio.tedp/: eosio.tedp.hpp
libs/: CMakeLists.txt
libs/delphioracle/include/delphioracle/: delphioracle.hpp
libs/eosio.evm/include/eosio.evm/: block.hpp  constants.hpp  eosio.evm.hpp  exception.hpp  opcode.hpp  processor.hpp  system.hpp  tables.hpp  transaction.hpp  util.hpp
libs/eosio.system/include/eosio.system/: eosio.system.hpp  native.hpp
libs/eosio.system/src/: delegate_bandwidth.cpp  eosio.system.cpp  powerup.cpp  producer_pay.cpp  rex.cpp
src/: CMakeLists.txt  eosio.tedp.abi  eosio.tedp.cpp  eosio.tedp.wasm
src/include/eosio.tedp/: eosio.tedp.hpp  tedp.constants.hpp
tests/: CMakeLists.txt  contracts.hpp.in  eosio.system_tester.hpp  eosio.system_tests.cpp  eosio.tedp_tester.hpp  eosio.tedp_tests.cpp
